<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:padding="15dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/first_name_label" />

        <EditText
            android:id="@+id/first_name_edit"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="2"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:padding="15dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/last_name_label" />

        <EditText
            android:id="@+id/last_name_edit"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="2"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:padding="15dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/phone_number_label" />

        <EditText
            android:id="@+id/phone_number_edit"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="2"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:padding="15dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/email_label" />

        <EditText
            android:id="@+id/email_edit"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="2"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:padding="15dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/street_address_label" />

        <EditText
            android:id="@+id/street_address_edit"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="2"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:padding="15dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/city_label" />

        <EditText
            android:id="@+id/city_edit"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="2"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:padding="15dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/province_label" />

        <EditText
            android:id="@+id/province_edit"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="2"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:padding="15dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/postal_code_label" />

        <EditText
            android:id="@+id/postal_code_edit"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="2"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:padding="15dp">

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"/>

    </TableRow>

</TableLayout>